<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KBTest_lab126</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_version">version 1.2</string>
    
    <string name="s_bt_addr">BT Device Address:</string>
    <string name="s_pair">Pair</string>
    <string name="s_test">UnPair</string>
    <string name="s_clear_map">Clear</string>
    <string name="s_exit_app">Exit</string>
    <string name="s_previous">&#8592;</string>
    
    <string name="s_home">♤</string>
    <string name="s_f1">F1</string>
    <string name="s_f2">F2</string>
    <string name="s_f3">F3</string>
    <string name="s_f4">F4</string>
    <string name="s_f5">F5</string>
    <string name="s_f6">F6</string>
    <string name="s_f7">F7</string>
    <string name="s_f8">F8</string>
    <string name="s_f9">F9</string>
    <string name="s_f10">F10</string>
    <string name="s_f11">F11</string>
    <string name="s_f12">F12</string>
    
    <string name="s_1">1</string>
    <string name="s_2">2</string>
    <string name="s_3">3</string>
    <string name="s_4">4</string>
    <string name="s_5">5</string>
    <string name="s_6">6</string>
    <string name="s_7">7</string>
    <string name="s_8">8</string>
    <string name="s_9">9</string>
    <string name="s_0">0</string>
    <string name="s_minus">-</string>
    <string name="s_bs">backspace&#160;</string>
    
    <string name="s_tab">&#160;tab</string>
    <string name="s_q">Q</string>
    <string name="s_w">W</string>
    <string name="s_e">E</string>
    <string name="s_r">R</string>
    <string name="s_t">T</string>
    <string name="s_y">Y</string>
    <string name="s_u">U</string>
    <string name="s_i">I</string>
    <string name="s_o">O</string>
    <string name="s_p">P</string>
    <string name="s_equal">=</string>
    <string name="s_backslash">\\</string>

    <string name="s_caps">&#160;caps</string>
    <string name="s_a">A</string>
    <string name="s_s">S</string>
    <string name="s_d">D</string>
    <string name="s_f">F</string>
    <string name="s_g">G</string>
    <string name="s_h">H</string>
    <string name="s_j">J</string>
    <string name="s_k">K</string>
    <string name="s_l">L</string>
    <string name="s_semicolon">&#59;</string>
    <string name="s_enter">enter&#160;</string>

    <string name="s_lshift">&#160;shift</string>
    <string name="s_z">Z</string>
    <string name="s_x">X</string>
    <string name="s_c">C</string>
    <string name="s_v">V</string>
    <string name="s_b">B</string>
    <string name="s_n">N</string>
    <string name="s_m">M</string>
    <string name="s_comma">&#44;</string>
    <string name="s_period">&#46;</string>
    <string name="s_slash">&#47;</string>
    <string name="s_rshift">shift&#160;</string>
    
    <string name="s_ctl">&#160;ctl</string>
    <string name="s_fn">&#160;fn</string>
    <string name="s_alt">&#160;alt</string>
    <string name="s_space">space</string>
    <string name="s_apostrophe">\'</string>
    <string name="s_lbracket">&#91;</string>
    <string name="s_rbracket">&#93;</string>
    <string name="s_arrow_up">&#160;▲&#160;</string>
    <string name="s_arrow_down">&#160;▼&#160;</string>
    <string name="s_arrow_left">&#160;◄&#160;</string>
    <string name="s_arrow_right">&#160;►&#160;</string>

    <string name="s_test_hint0">測試提示 :</string>
    <string name="s_test_hint">輸入藍芽鍵盤 MAC Address，然後按下 "Pair" 按鍵</string>
    <string name="s_pairing_test">1. 配對測試</string>
    <string name="s_pairing_test_status">: 等待配對..</string>
    <string name="s_key_test">2. 按鍵測試</string>
    <string name="s_key_test_status">: 尚未完成</string>
    <string name="s_caps_test">&#160;&#160;&#160;&#160;caps LED 確認</string>
    <string name="s_caps_test_status">: 尚未完成</string>
    <string name="s_trackpad_test">3. Trackpad 測試</string>
    <string name="s_trackpad_test_status">: 尚未完成</string>
    <string name="s_trackpad_reportrate0">&#160;&#160;&#160;&#160;report rate</string>
    <string name="s_trackpad_reportrate_status">: 尚未完成</string>
    <string name="s_trackpad_reportrate">: 0</string>
    <string name="s_trackpad_click0">&#160;&#160;&#160;&#160;single tap/click</string>
    <string name="s_trackpad_click_status">: 尚未完成</string>
    <string name="s_trackpad_click">: X</string>
    <string name="s_trackpad_scroll0">&#160;&#160;&#160;&#160;scroll</string>
    <string name="s_trackpad_scroll">: X</string>
    <string name="s_trackpad_scroll_status">: 尚未完成</string>
    <string name="s_test_result0">測試結果 :</string>
    <string name="s_test_result">尚未完成</string>
    
    <string name="s_pref_title_set_reportrate">Report rate</string>
    <string name="s_pref_set_reportrate">80</string>
    <string name="s_pref_title_set_reportrate_range">Report rate range (+/-)</string>
    <string name="s_pref_set_reportrate_range">30</string>
    <string name="s_pref_title_set_reportrate_hold_seconds">Report rate hold seconds</string>
    <string name="s_pref_set_reportrate_hold_seconds">5</string>
    

</resources>
